[+] New Listener System [+] New Command System [+] New GUI System (WIP)